@@ -1,3 +1,4 @@
+* Add delete_all action on One2Many field
 * Read, write, create, delete permission on record rules
 * Add reset_default method to ir.default
 * Doesn't append '%' to "like", "ilike" clauses
